@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * "limit" and "since" arguments while retrieving DICOM resources in the REST API
+* Support of "deflate" and "gzip" content-types in HTTP requests
 
 
 Version 0.9.3 (2015/08/07)
